# opencode-snapshot-tool-2026

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  design.md
apps/snapshot-tool/: CMakeLists.txt  app-icon.rc  main.cpp  snapshot_controller.cpp  snapshot_controller.h
apps/snapshot-tool/qml/: Main.qml
cmake/: OstGTest.cmake  OstWarnings.cmake
docs/: architecture.md  implementation-report.md  repository-analysis.md  takingnotes-acceptance.md
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md
libs/core/: CMakeLists.txt
libs/core/include/ost/core/: app_settings.h  git_client.h  opencode_process_detector.h  retention_policy.h  snapshot_analyzer.h  snapshot_cleaner.h  snapshot_scanner.h  snapshot_types.h
libs/core/src/: app_settings.cpp  git_client.cpp  opencode_process_detector.cpp  retention_policy.cpp  snapshot_analyzer.cpp  snapshot_cleaner.cpp  snapshot_scanner.cpp
scripts/: build.ps1  build.sh  dev-env.ps1  package-windows.ps1
tests/: CMakeLists.txt  analyzer_integration_test.cpp  cleaner_integration_test.cpp  process_activity_test.cpp  retention_policy_test.cpp  scanner_database_integration_test.cpp  scanner_layout_test.cpp
